// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsernameSelector can can handle invalid domain 1`] = `
<div>
  <div
    class="pf-l-stack pf-m-gutter wizard-content"
  >
    <div
      class="pf-l-stack__item"
    >
      <h1
        class="pf-c-title pf-m-2xl"
        data-ouia-component-id="OUIA-Generated-Title-2"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Choose a username 
        <span
          class="required-badge"
        >
          *
        </span>
      </h1>
    </div>
    <div
      class="pf-l-stack__item wizard-sublabel"
    >
      Create a new personalized, account for future access replacing recent kubeadmin user.
    </div>
    <div
      class="pf-l-stack__item pf-m-fill username-item"
    >
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="true"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-2"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="input-username"
            id="input-username"
            type="text"
            value="invalid-"
          />
          <div
            class="validation-failed-text"
            data-testid="validation-failed-text"
          >
            Valid username wasn't provided
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UsernameSelector can can handle invalid domain 2`] = `
<div>
  <div
    class="pf-l-stack pf-m-gutter wizard-content"
  >
    <div
      class="pf-l-stack__item"
    >
      <h1
        class="pf-c-title pf-m-2xl"
        data-ouia-component-id="OUIA-Generated-Title-2"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Choose a username 
        <span
          class="required-badge"
        >
          *
        </span>
      </h1>
    </div>
    <div
      class="pf-l-stack__item wizard-sublabel"
    >
      Create a new personalized, account for future access replacing recent kubeadmin user.
    </div>
    <div
      class="pf-l-stack__item pf-m-fill username-item"
    >
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="true"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-2"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="input-username"
            id="input-username"
            type="text"
            value="invalid-"
          />
          <div
            class="validation-failed-text"
            data-testid="validation-failed-text"
          >
            Valid username wasn't provided
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UsernameSelector can render 1`] = `
<div>
  <div
    class="pf-l-stack pf-m-gutter wizard-content"
  >
    <div
      class="pf-l-stack__item"
    >
      <h1
        class="pf-c-title pf-m-2xl"
        data-ouia-component-id="OUIA-Generated-Title-1"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Choose a username 
        <span
          class="required-badge"
        >
          *
        </span>
      </h1>
    </div>
    <div
      class="pf-l-stack__item wizard-sublabel"
    >
      Create a new personalized, account for future access replacing recent kubeadmin user.
    </div>
    <div
      class="pf-l-stack__item pf-m-fill username-item"
    >
      <div
        class="pf-c-form__group"
      >
        <div
          class="pf-c-form__group-control"
        >
          <input
            aria-invalid="false"
            class="pf-c-form-control"
            data-ouia-component-id="OUIA-Generated-TextInputBase-1"
            data-ouia-component-type="PF4/TextInput"
            data-ouia-safe="true"
            data-testid="input-username"
            id="input-username"
            type="text"
            value=""
          />
          
        </div>
      </div>
    </div>
  </div>
</div>
`;
